[gd_scene load_steps=5 format=3 uid="uid://fdtudb722w5c"]

[ext_resource type="Script" uid="uid://6m4makbt0whq" path="res://enemies/base_enemy/scripts/enemy.gd" id="1_edq6g"]
[ext_resource type="SpriteFrames" uid="uid://2ws2huumcejy" path="res://resources/enemies/zombie-anims.tres" id="2_exaow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hc4ed"]
size = Vector2(32, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exaow"]
size = Vector2(80, 40)

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 9
collision_mask = 17
script = ExtResource("1_edq6g")
type = 0
health = 5
move_speed = 100
attack_power = 1

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.525908, 0.460418, 1)

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_exaow")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_hc4ed")
debug_color = Color(0.315564, 0.0487061, 0.103106, 0.42)

[node name="MeleeArea" type="Area2D" parent="."]
collision_mask = 5

[node name="MeleeShape" type="CollisionShape2D" parent="MeleeArea"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_exaow")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="MeleeArea" to="." method="_on_melee_body_entered"]
[connection signal="body_exited" from="MeleeArea" to="." method="_on_melee_body_exited"]
